# projex

./: .gitignore  README.md  docker-compose.yml
backend/: main.py  pyproject.toml
backend/app/agent/: action_agent.py  agent.py  llm.py  load_memory_agent.py  query_agent.py  router_agent.py  save_message_agent.py  setup_agent.py  state.py
backend/app/agent/prompt/: __init__.py  action_agent_prompt.py  query_agent_prompt.py  router_agent_prompt.py
backend/app/agent/tools/: __init__.py  action_tools.py  query_tools.py  setup_tools.py
backend/app/api/: main.py
backend/app/api/auth/: deps.py  route.py  schema.py  security.py  service.py
backend/app/api/chat/: __init__.py  route.py  schema.py  service.py
backend/app/api/projects/: __init__.py  route.py  schema.py
backend/app/api/sessions/: __init__.py  route.py  schema.py
backend/app/config/: settings.py
backend/app/database/: __init__.py  database.py
backend/app/repository/: __init__.py  chats.py  main.py  schema.py  session.py  user.py
backend/app/zoho/: __init__.py  auth.py  client.py  schema.py
docker/: api.dockerfile  web.dockerfile
docs/: architecture-overview.md  how-it-works.md  local-setup.md
frontend/: package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/hooks/: useAuth.ts  useChat.ts  useProjects.ts  useSessions.ts
frontend/src/lib/: api-client.ts
migrations/: 20260524114820_create_zoho_chat_tables.down.sql  20260524114820_create_zoho_chat_tables.up.sql  20260524222238_create_zoho_chat_tables.down.sql  20260524222238_create_zoho_chat_tables.up.sql
(+23 files in other folders)
