[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "langchain>=1.3.1",
    "langchain-google-genai>=4.2.2",
    "python-dotenv>=1.0.1",
    "pyjwt>=2.10.1",
    "psycopg>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "requests>=2.34.2",
]
